# press-kit

./: .gitignore  README.md  pyproject.toml
backend/: main.py
backend/agents/: __init__.py  chain.py  chat_models.py  config.py
backend/agents/evaluator/: __init__.py  base.py  evaluator.py
backend/agents/generator/: __init__.py  base.py  generator.py
backend/agents/searcher/: __init__.py  base.py  searcher.py
backend/schemas/: __init__.py  request.py
frontend/: app.py
