[tool.poetry]
name = "pressagent"
version = "0.1.0"
description = ""
authors = ["UjjTiw <ujjwaltiwari2004razor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.18"
langchain-openai = "^0.3.6"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
langchain-community = "^0.3.17"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
gradio = "^5.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
